k8s/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: watson
spec:
  selector:
    matchLabels:
      app: watson
  template:
    metadata:
      labels:
        app: watson
    spec:
      containers:
        - name: watson
          image: shokohsc/watson
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          # readinessProbe:
          #   httpGet:
          #     port: http
          #     path: /
          resources:
            requests:
              cpu: 100m
              memory: 64M
            limits:
              cpu: 1000m
              memory: 512M
