k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: watson
  labels:
    app: watson
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: watson
